# pong

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glew-2.1.0/: glew.pc
source/: input.cpp  input.h  object-store.cpp  object-store.h  object_store.cpp  object_store.h  rectangle.h  renderer.cpp  renderer.h  shader.cpp  shader.h  triangle.h
source/abstract/: game-object.cpp  game_object.cpp  game_object.h  shape.h
source/rendering/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertexbuffer.cpp  vertexbuffer.h
source/shaders/: basic.fragment.glsl  basic.vertex.glsl
source/util/: file.cpp  file.h  logger.cpp  logger.h
